# cmakedemo_externalproject

./: CMakeLists.txt  README.md
.github/workflows/: ubuntu.yml
src/: CMakeLists.txt
